Bug 429840 - Old resource assingments not removed for rescheduled tasks
Summary: Old resource assingments not removed for rescheduled tasks
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-30 08:48 UTC by Dag Andersen
Modified: 2021-01-08 12:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.2.89
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dag Andersen 2020-11-30 08:48:55 UTC
SUMMARY
When recalculating started projects and tasks is rescheduled to start later, the old resource assignments are not removed.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Dag Andersen 2020-12-29 07:29:02 UTC
Git commit cd08a994fef905d6a9d259cdd4099e1d980632d9 by Dag Andersen.
Committed on 12/12/2020 at 13:29.
Pushed by danders into branch 'master'.

Task: Fix scheduling of started tasks
FIXED-IN: 3.2.89

M  +31   -3    src/libs/kernel/kpttask.cpp
M  +2    -1    src/libs/kernel/kpttask.h

https://invent.kde.org/office/calligraplan/commit/cd08a994fef905d6a9d259cdd4099e1d980632d9
Comment 2 Dag Andersen 2021-01-08 12:13:14 UTC
Git commit b48c94d60ca0fe04c1cd4962edcaf1c514fc99bd by Dag Andersen.
Committed on 29/12/2020 at 08:04.
Pushed by danders into branch '3.3'.

Task: Fix scheduling of started tasks
FIXED-IN: 3.2.89
(cherry picked from commit cd08a994fef905d6a9d259cdd4099e1d980632d9)

M  +31   -3    src/libs/kernel/kpttask.cpp
M  +2    -1    src/libs/kernel/kpttask.h

https://invent.kde.org/office/calligraplan/commit/b48c94d60ca0fe04c1cd4962edcaf1c514fc99bd