Task: Fix scheduling of started tasks

BUG:429840
FIXED-IN: 3.2.89
(cherry picked from commit cd08a994fef905d6a9d259cdd4099e1d980632d9)